add github oauth2 login, add /api/oauth/github/login and /callback endpoints, account linking. refactor internal/auth getting rid of redudant code for session cookies, wire frontend to new changes
